# duckdb_extensions

./: .actrc  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  USER_GUIDE.md  _version.py  add_extension_files.py  checksum_constants.py  extension_checksums.json  pyproject.toml  test_artifact.py  test_version_logic.py
.github/actions/setup-uv/: action.yml
.github/workflows/: _extension-publish.yml  publish-arrow-to-pypi.yml  publish-autocomplete-to-pypi.yml  publish-avro-to-pypi.yml  publish-aws-to-pypi.yml  publish-azure-to-pypi.yml  publish-delta-to-pypi.yml  publish-ducklake-to-pypi.yml  publish-encodings-to-pypi.yml  publish-excel-to-pypi.yml  publish-fts-to-pypi.yml  publish-httpfs-to-pypi.yml  publish-httpfs-to-test-pypi.yml  publish-iceberg-to-pypi.yml  publish-icu-to-pypi.yml  publish-inet-to-pypi.yml  publish-json-to-pypi.yml  publish-lance-to-pypi.yml  publish-motherduck-to-pypi.yml  publish-mysql-to-pypi.yml  publish-mysql_scanner-to-pypi.yml  publish-odbc-to-pypi.yml  publish-odbc_scanner-to-pypi.yml  publish-parquet-to-pypi.yml  publish-parquet-to-test-pypi.yml  publish-postgres-to-pypi.yml  publish-postgres_scanner-to-pypi.yml  publish-quack-to-pypi.yml  publish-spatial-to-pypi.yml  publish-spatial-to-test-pypi.yml  publish-sqlite-to-pypi.yml  publish-sqlite3-to-pypi.yml  publish-sqlite_scanner-to-pypi.yml  publish-substrait-to-pypi.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish-tpcds-to-pypi.yml  publish-tpch-to-pypi.yml  publish-ui-to-pypi.yml  publish-unity_catalog-to-pypi.yml  (+2 more)
build_tools/hatch_duckdb_extension_build_tools/: build_hook.py  pyproject.toml
build_tools/hatch_duckdb_extension_build_tools/src/duckdb_extension_build_tools/: __init__.py  hooks.py  plugin.py
docs/plans/: 2026-03-13-ci-build-hook-import.md  2026-03-14-odbc-extension-pr39.md  2026-03-14-odbc-symmetry-design.md
extensions/duckdb_extension_arrow/: README.md  pyproject.toml
extensions/duckdb_extension_autocomplete/: README.md  pyproject.toml
extensions/duckdb_extension_avro/: README.md  pyproject.toml
extensions/duckdb_extension_aws/: README.md  pyproject.toml
extensions/duckdb_extension_azure/: README.md  pyproject.toml
extensions/duckdb_extension_delta/: README.md  pyproject.toml
extensions/duckdb_extension_ducklake/: README.md  pyproject.toml
extensions/duckdb_extension_encodings/: README.md  pyproject.toml
extensions/duckdb_extension_excel/: README.md  pyproject.toml
extensions/duckdb_extension_fts/: README.md  pyproject.toml
extensions/duckdb_extension_httpfs/: README.md  pyproject.toml
extensions/duckdb_extension_iceberg/: README.md  pyproject.toml
extensions/duckdb_extension_icu/: LICENSE.txt  README.md  pyproject.toml
extensions/duckdb_extension_inet/: README.md  pyproject.toml
extensions/duckdb_extension_json/: README.md  publish-json-to-pypi.yml  pyproject.toml
extensions/duckdb_extension_lance/: README.md  pyproject.toml
extensions/duckdb_extension_motherduck/: README.md  pyproject.toml
extensions/duckdb_extension_mysql/: README.md  publish-mysql-to-pypi.yml  pyproject.toml
extensions/duckdb_extension_mysql_scanner/: README.md  pyproject.toml
extensions/duckdb_extension_odbc/: README.md  pyproject.toml
extensions/duckdb_extension_odbc_scanner/: README.md  pyproject.toml
extensions/duckdb_extension_parquet/: README.md  pyproject.toml
extensions/duckdb_extension_parquet/src/duckdb_extension_parquet/: __about__.py  __init__.py
extensions/duckdb_extension_postgres/: README.md  pyproject.toml
extensions/duckdb_extension_postgres_scanner/: README.md  pyproject.toml
extensions/duckdb_extension_quack/: README.md  pyproject.toml
extensions/duckdb_extension_spatial/: README.md  pyproject.toml
extensions/duckdb_extension_sqlite/: README.md  pyproject.toml
extensions/duckdb_extension_sqlite3/: README.md  pyproject.toml
extensions/duckdb_extension_sqlite_scanner/: README.md  pyproject.toml
extensions/duckdb_extension_substrait/: README.md  pyproject.toml
extensions/duckdb_extension_tpcds/: README.md  pyproject.toml
extensions/duckdb_extension_tpch/: README.md  publish-tpch-to-pypi.yml  pyproject.toml
extensions/duckdb_extension_ui/: README.md  pyproject.toml
extensions/duckdb_extension_unity_catalog/: README.md  pyproject.toml
extensions/duckdb_extension_vortex/: README.md  pyproject.toml
extensions/duckdb_extension_vss/: README.md  pyproject.toml
scripts/: maintainer.py
src/duckdb_extensions/: __init__.py  extension_importer.py
templates/: cookiecutter.json
templates/duckdb_extension_{@cookiecutter.extension_name@}/: README.md  publish-{@cookiecutter.extension_name@}-to-pypi.yml  pyproject.toml
tests/: test_checksum_verification.py  test_maintainer.py
