[project]
name = "duckdb_extensions"
description = "DuckDB extensions as python package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = []
authors = [
    { name = "santosh", email = "void@some.where" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy", 
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "duckdb==1.3.2",
    "importlib-resources>=3.0.0;python_version<'3.9'",
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/santosh-d3vpl3x/duckdb_extensions#readme"
Issues = "https://github.com/santosh-d3vpl3x/duckdb_extensions/issues"
Source = "https://github.com/santosh-d3vpl3x/duckdb_extensions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "_version.py"

[tool.uv.workspace]
members = ["extensions/*"]

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]
line-length = 120

