[project]
name = "hatch-duckdb-extension-build-tools"
version = "0.1.0"
description = "Hatchling build hook plugin for DuckDB extension wheels"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "santosh", email = "void@some.where" },
]
dependencies = [
    "hatchling>=1.27.0",
    "requests>=1.0.0",
]

[project.entry-points.hatch]
duckdb_extension_build_tools = "duckdb_extension_build_tools.hooks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_extension_build_tools"]
